--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -5,9 +5,8 @@ name: Basic
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+	  - '*'
 
 jobs: # the name of the workflow
   build: # the name of the job (can be more than one)
