--- a/.github/workflows/multi-stage.yml
+++ b/.github/workflows/multi-stage.yml
@@ -1,5 +1,5 @@
 
-# .github/workflows/ci.yml
+# .github/workflows/multi-stage.yml
 
 name: CI
 
@@ -15,6 +15,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Use NodeJS
         uses: actions/setup-node@v1
-        with: node-version: 14.x
+        with:
+          node-version: 14.x
       - run: npm install
       - run: npm run linter
+  Step-2:
+    runs-on: ubuntu-latest
+	steps:
+	  - uses: actions/checkout@v2
+	  - run: echo This is stage 2
