--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -15,5 +15,6 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
       - name: Run a multi-line script
-      - run: echo Add other actions to build,
-      - run: echo test, and deploy your project.
+      - run: |
+	    echo Add other actions to build,
+        echo test, and deploy your project.
