--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -20,3 +20,7 @@ jobs:
           echo test, and deploy your project.
       - name: env vars
         run: printenv
+      - name: GitHub Variables
+        run: |
+          echo $GITHUB_WORKSPACE
+          echo $GITHUB_EVENT_NAME
