--- a/.github/workflows/single-stage.yml
+++ b/.github/workflows/single-stage.yml
@@ -18,6 +18,6 @@ jobs:
         with:
           node-version: 14.x
       - name: install node packages
-        run: npm install
+        run: npm install eslint
       - name: run the linter
-        run: npm run linter
+        run: ./node_modules/.bin/eslint .
