--- a/.github/workflows/single-stage.yml
+++ b/.github/workflows/single-stage.yml
@@ -1,5 +1,5 @@
 
-# .github/workflows/ci.yml
+# .github/workflows/single-stage.yml
 
 name: Single-Stage
 
@@ -18,6 +18,6 @@ jobs:
         with:
           node-version: 14.x
       - name: install node packages
-        run: npm install eslint
+        run: npm install
       - name: run the linter
-        run: ./node_modules/.bin/eslint .
+        run: npm run linter
