--- a/.github/workflows/multi-stage.yml
+++ b/.github/workflows/multi-stage.yml
@@ -5,9 +5,9 @@ name: Multi-Stage
 
 on:
   push:
-    branches: ['none']
+    branches: ['master']
   pull_request:
-    branches: ['none']
+    branches: ['master']
 jobs:
   Linter:
     runs-on: ubuntu-latest
