--- a/.github/workflows/multi-stage.yml
+++ b/.github/workflows/multi-stage.yml
@@ -32,5 +32,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
-      - run: npm install
-      - run: npm test
+      - name: Install Testing Tools
+        run: npm install
+      - name: Run Test Suite
+        run: npm test
